[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "strata_rs"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.2"
quick-error = "1.1.0"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = "0.2.6"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.strata]
git = "https://github.com/shepmaster/strata"

[dependencies.fuzzy-pickles]
path = "../fuzzy-pickles"
