[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "strata_rs"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.2"
quick-error = "1.1.0"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.strata]
git = "https://github.com/shepmaster/strata"

[dependencies.fuzzy-pickles]
path = "../fuzzy-pickles"
