[package]
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
name = "strata_rs"
version = "0.1.0"

[dependencies]
lazy_static = "1.0"
quick-error = "1.1"
rocket = "0.4.0"
rocket_codegen = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
fuzzy-pickles = "0.1.0"
strata = "0.1.1"
